--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://705248010.github.io"
+baseURL: "https://kurongtohsaka.github.io"
 title: KurongBlog
 paginate: 10
 theme: PaperMod
