--- a/config.yml
+++ b/config.yml
@@ -79,7 +79,7 @@ params:
   # home-info mode
   homeInfoParams:
     Title: "Hi there \U0001F44B"
-    Content: Welcome to my blog, dude.
+    Content: Welcome to my blog.
 
   socialIcons:
     - name: github
@@ -99,7 +99,7 @@ params:
     hiddenInSingle: false # hide on single page
 
   editPost:
-    URL: "https://github.com/KurongTohsaka/KurongTohsaka.github.io"
+    URL: "https://github.com/KurongTohsaka/KurongTohsaka.github.io/content"
     Text: "Suggest Changes" # edit text
     appendFilePath: true # to append file path to Edit link
 
