update theme config; add leetcode-75

--- a/config.yml
+++ b/config.yml
@@ -114,6 +114,9 @@ params:
     minMatchCharLength: 0
     limit: 10 # refer: https://www.fusejs.io/api/methods.html#search
     keys: ["title", "permalink", "summary", "content"]
+
+  paginateTags: 50
+  paginatepath: "page"
 menu:
   main:
     - identifier: categories
